crates/parser/tests/cases/snapshots/cases__errors__expr_path_left.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(expr_path_left), expressions::parse_expr,\n    \"(1 + 2)::foo::bar\")"

---
error: failed to parse path expression
  ┌─ expr_path_left:1:1
  │
1 │ (1 + 2)::foo::bar
  │ ^^^^^^^-- path delimiter
  │ │       
  │ expected a name


